--- a/Notebooks/toy_hamiltonian_v3.ipynb
+++ b/Notebooks/toy_hamiltonian_v3.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,145 +101,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "H = 1.000 * Z   +  2.000 * X +  0.500 * Y\n",
-      "<Z> = 1.000 , <X> = -0.003 , <Y> = -0.003 \n",
-      "Total Probability = 1.000\n",
-      "<Z> = 0.548 , <X> = 0.837 , <Y> = -0.001 \n",
-      "Total Probability = 1.000\n",
-      "<Z> = 1.000 , <X> = -0.008 , <Y> = 0.019 \n",
-      "Total Probability = 1.000\n",
-      "<Z> = 0.540 , <X> = -0.457 , <Y> = -0.706 \n",
-      "Total Probability = 1.000\n",
-      "<Z> = -0.411 , <X> = -0.496 , <Y> = -0.765 \n",
-      "Total Probability = 1.000\n",
-      "<Z> = -0.958 , <X> = -0.003 , <Y> = -0.288 \n",
-      "Total Probability = 1.000\n",
-      "<Z> = -0.693 , <X> = -0.720 , <Y> = -0.041 \n",
-      "Total Probability = 1.000\n",
-      "<Z> = -0.121 , <X> = -0.752 , <Y> = 0.647 \n",
-      "Total Probability = 1.000\n",
-      "<Z> = -0.951 , <X> = -0.309 , <Y> = -0.017 \n",
-      "Total Probability = 1.000\n",
-      "<Z> = -0.596 , <X> = -0.775 , <Y> = -0.210 \n",
-      "Total Probability = 1.000\n",
-      "<Z> = -0.383 , <X> = -0.898 , <Y> = -0.216 \n",
-      "Total Probability = 1.000\n",
-      "<Z> = -0.246 , <X> = -0.879 , <Y> = -0.409 \n",
-      "Total Probability = 1.000\n",
-      "<Z> = -0.370 , <X> = -0.925 , <Y> = -0.092 \n",
-      "Total Probability = 1.000\n",
-      "<Z> = -0.456 , <X> = -0.865 , <Y> = -0.208 \n",
-      "Total Probability = 1.000\n",
-      "<Z> = -0.429 , <X> = -0.871 , <Y> = -0.240 \n",
-      "Total Probability = 1.000\n",
-      "<Z> = -0.486 , <X> = -0.841 , <Y> = -0.238 \n",
-      "Total Probability = 1.000\n",
-      "<Z> = -0.413 , <X> = -0.878 , <Y> = -0.243 \n",
-      "Total Probability = 1.000\n",
-      "<Z> = -0.451 , <X> = -0.856 , <Y> = -0.254 \n",
-      "Total Probability = 1.000\n",
-      "<Z> = -0.421 , <X> = -0.877 , <Y> = -0.232 \n",
-      "Total Probability = 1.000\n",
-      "<Z> = -0.416 , <X> = -0.879 , <Y> = -0.233 \n",
-      "Total Probability = 1.000\n",
-      "<Z> = -0.426 , <X> = -0.872 , <Y> = -0.240 \n",
-      "Total Probability = 1.000\n",
-      "<Z> = -0.431 , <X> = -0.874 , <Y> = -0.227 \n",
-      "Total Probability = 1.000\n",
-      "<Z> = -0.425 , <X> = -0.880 , <Y> = -0.214 \n",
-      "Total Probability = 1.000\n",
-      "<Z> = -0.420 , <X> = -0.877 , <Y> = -0.233 \n",
-      "Total Probability = 1.000\n",
-      "<Z> = -0.440 , <X> = -0.869 , <Y> = -0.227 \n",
-      "Total Probability = 1.000\n",
-      "<Z> = -0.422 , <X> = -0.873 , <Y> = -0.242 \n",
-      "Total Probability = 1.000\n",
-      "<Z> = -0.443 , <X> = -0.868 , <Y> = -0.224 \n",
-      "Total Probability = 1.000\n",
-      "<Z> = -0.440 , <X> = -0.870 , <Y> = -0.222 \n",
-      "Total Probability = 1.000\n",
-      "<Z> = -0.435 , <X> = -0.866 , <Y> = -0.245 \n",
-      "Total Probability = 1.000\n",
-      "<Z> = -0.430 , <X> = -0.877 , <Y> = -0.213 \n",
-      "Total Probability = 1.000\n",
-      "<Z> = -0.439 , <X> = -0.869 , <Y> = -0.229 \n",
-      "Total Probability = 1.000\n",
-      "<Z> = -0.446 , <X> = -0.865 , <Y> = -0.228 \n",
-      "Total Probability = 1.000\n",
-      "<Z> = -0.426 , <X> = -0.878 , <Y> = -0.217 \n",
-      "Total Probability = 1.000\n",
-      "<Z> = -0.431 , <X> = -0.877 , <Y> = -0.215 \n",
-      "Total Probability = 1.000\n",
-      "<Z> = -0.425 , <X> = -0.877 , <Y> = -0.223 \n",
-      "Total Probability = 1.000\n",
-      "<Z> = -0.446 , <X> = -0.867 , <Y> = -0.221 \n",
-      "Total Probability = 1.000\n",
-      "<Z> = -0.438 , <X> = -0.869 , <Y> = -0.230 \n",
-      "Total Probability = 1.000\n",
-      "<Z> = -0.425 , <X> = -0.871 , <Y> = -0.247 \n",
-      "Total Probability = 1.000\n",
-      "<Z> = -0.435 , <X> = -0.873 , <Y> = -0.220 \n",
-      "Total Probability = 1.000\n",
-      "<Z> = -0.438 , <X> = -0.867 , <Y> = -0.238 \n",
-      "Total Probability = 1.000\n",
-      "<Z> = -0.435 , <X> = -0.868 , <Y> = -0.242 \n",
-      "Total Probability = 1.000\n",
-      "<Z> = -0.437 , <X> = -0.872 , <Y> = -0.222 \n",
-      "Total Probability = 1.000\n",
-      "<Z> = -0.439 , <X> = -0.869 , <Y> = -0.229 \n",
-      "Total Probability = 1.000\n",
-      "<Z> = -0.425 , <X> = -0.874 , <Y> = -0.237 \n",
-      "Total Probability = 1.000\n",
-      "<Z> = -0.454 , <X> = -0.863 , <Y> = -0.224 \n",
-      "Total Probability = 1.000\n",
-      "<Z> = -0.435 , <X> = -0.871 , <Y> = -0.229 \n",
-      "Total Probability = 1.000\n",
-      "<Z> = -0.438 , <X> = -0.873 , <Y> = -0.214 \n",
-      "Total Probability = 1.000\n",
-      "<Z> = -0.420 , <X> = -0.878 , <Y> = -0.229 \n",
-      "Total Probability = 1.000\n",
-      "<Z> = -0.438 , <X> = -0.871 , <Y> = -0.221 \n",
-      "Total Probability = 1.000\n",
-      "<Z> = -0.424 , <X> = -0.877 , <Y> = -0.226 \n",
-      "Total Probability = 1.000\n",
-      "<Z> = -0.430 , <X> = -0.876 , <Y> = -0.219 \n",
-      "Total Probability = 1.000\n",
-      "<Z> = -0.428 , <X> = -0.873 , <Y> = -0.233 \n",
-      "Total Probability = 1.000\n",
-      "<Z> = -0.420 , <X> = -0.880 , <Y> = -0.223 \n",
-      "Total Probability = 1.000\n",
-      "<Z> = -0.445 , <X> = -0.864 , <Y> = -0.236 \n",
-      "Total Probability = 1.000\n",
-      "<Z> = -0.428 , <X> = -0.877 , <Y> = -0.217 \n",
-      "Total Probability = 1.000\n",
-      "<Z> = -0.449 , <X> = -0.864 , <Y> = -0.228 \n",
-      "Total Probability = 1.000\n",
-      "<Z> = -0.427 , <X> = -0.875 , <Y> = -0.229 \n",
-      "Total Probability = 1.000\n",
-      "<Z> = -0.422 , <X> = -0.881 , <Y> = -0.214 \n",
-      "Total Probability = 1.000\n",
-      "<Z> = -0.431 , <X> = -0.873 , <Y> = -0.229 \n",
-      "Total Probability = 1.000\n",
-      "< H > computed =  -2.291\n",
-      "< H > exact = -2.291\n",
-      "|g.s.> = Rz(-2.017) Ry(0.256) |0>\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\User\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:20: ComplexWarning: Casting complex values to real discards the imaginary part\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ham_coef = np.array([1.,2.,0.5])   #these are the Hamiltonian coefficients on Z, X, and Y respectively\n",
     "n_params = 2\n",
@@ -252,8 +116,8 @@
     "\n",
     "optimizer = COBYLA(maxiter=500, tol=10**-8)\n",
     "\n",
-    "# params_init = np.random.rand(n_params)\n",
-    "params_init = np.zeros(n_params)\n",
+    "params_init = np.random.rand(n_params)\n",
+    "# params_init = np.zeros(n_params)\n",
     "opt_result = optimizer.optimize(num_vars=n_params, objective_function=objective_function, initial_point=params_init)\n",
     "\n",
     "exp_ham = ham_exp_val(opt_result[0],ham_coef)\n",
