--- a/Notebooks/toy_hamiltonian_v4.ipynb
+++ b/Notebooks/toy_hamiltonian_v4.ipynb
@@ -11,14 +11,12 @@
     "This notebook uses the  built-in Qiskit classes to do the same problem as `toy_hamiltonian_v3.ipynb` : use the variational technique to solve for the ground state of $H = a Z + b X + c Y $\n",
     "where $Z,X,Y$ are Pauli matrices and $a,b,c$ are real inputs.\n",
     "\n",
-    "We simply construct the Hamiltonian with `WeightedPauliOperator`, initialize the variational form with `RYRZ`, choose optimizer `COBYLA`, and run the `VQE` object.\n",
-    "\n",
-    "This code i"
+    "Below I simply construct the Hamiltonian operator object with `WeightedPauliOperator`, initialize the variational form with `RYRZ`, choose optimizer `COBYLA`, and run the `VQE` object."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,43 +53,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "H = get_ham_op([1,2,0.5])\n",
+    "H = get_ham_op([1,2,0.5])      # set hamiltonian parameters here\n",
     "var_form = RYRZ(num_qubits=1)   # define variational form of wavefunction\n",
-    "opt = COBYLA(maxiter=10**6,tol=10**-5)      # choose optimizer and parameters"
+    "opt = COBYLA(maxiter=10**6,tol=10**-5)      # choose optimizer parameters"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "VQE g.s. energy = -2.272400\n",
-      "exact g.s. energy = -2.291288\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\User\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:5: ComplexWarning: Casting complex values to real discards the imaginary part\n",
-      "  \"\"\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "vqe = VQE(H, var_form, opt)\n",
     "vqe_result = vqe.run(backend,shots=10000)    # remember to set shots here, as it determines statistical convergence\n",
     "egs_vqe = vqe_result['energy']\n",
     "print('VQE g.s. energy = %f' % egs_vqe)\n",
-    "print('exact g.s. energy = %f' % min(ExactEigensolver(H).run()['eigvals']))"
+    "print('exact g.s. energy = %f' % min(ExactEigensolver(H).run()['eigvals']))   # returns imaginary part of machine zero sometimes"
    ]
   },
   {
